css/theme.css
:root {
    --light-border-color: #dee2e6;
    --code-color: #008080;
    --main-color: #008cba;
}

body {
    font-size: 1.05rem;
}

.blog-navbar {
    background-color: var(--main-color);
}

.sidebar {
    border-left-style: solid;
    border-left-color: var(--main-color);
    border-left-width: 1px;
}

a {
    color: var(--main-color);
    text-decoration: none;
}

a:hover {
    color: var(--main-color);
    text-decoration: underline;
}

hr {
    background-color: var(--light-border-color);
    opacity: 1.0;
}

blockquote {
    padding: 0.75rem 1rem 0.25rem 1rem;
    margin-top: 1.25rem;
    margin-bottom: 1.15rem;
    border: 1px solid var(--light-border-color);
    border-left-width: .5rem;
    border-radius: .25rem;
    background-color: #f2f3f5;
}

code {
    color: var(--code-color);
}

.navbar a {
    text-decoration: none;
}

.bg-primary {
    background-color: var(--main-color) !important;
}

.post-list h1 {
    font-size: 1.9em;
}

.post-list article {
    padding-bottom: 1.7em;
}

div.excerpt > h2 {
    font-size: 1.4rem;
}

article > div.details {
    padding-bottom: 0.3em;
    margin-bottom: 0.6em;
}

article.post > div.details {
    padding-bottom: 0.3em;
    border-bottom: 1px solid var(--light-border-color);
    margin-bottom: 0.6em;
}

article.post > div.details > .tags {
    padding-left: 0.5rem;
}

article.post > div.details > .icons {
    padding-left: 0.75rem;
}

article.post > div.details > .icons {
    color: var(--main-color);
}

div.tag-header {
    padding-bottom: 0.3em;
    border-bottom: 1px solid var(--light-border-color);
    margin-bottom: 0.6em;
}

div.series-header {
    padding-bottom: 0.3em;
    border-bottom: 1px solid var(--light-border-color);
    margin-bottom: 0.6em;
}

svg.octicon {
    fill: currentColor;
}

ul.nav.series > li.active {
    font-weight: bold;
}

div.highlight {
    padding: 0.5rem;
}

div.highlighter-rouge {
    margin-bottom: 0.5rem;
}

pre.highlight {
    margin: 0;
}

pre.dark {
    padding: 0.5rem;
    background-color: #333;
    color: white;
}

h1[id]:hover a.anchorlink:before,
h2[id]:hover a.anchorlink:before,
h3[id]:hover a.anchorlink:before,
h4[id]:hover a.anchorlink:before,
h5[id]:hover a.anchorlink:before,
h6[id]:hover a.anchorlink:before {
  content: "#";
  color: var(--main-color);
  font-size: smaller;
}
a.anchorlink {
  text-decoration: none;
  font-size: smaller;
}

:target {
    animation: highlight 2s ease;
}

@keyframes highlight {
    0% { background-color: #7ac8e2; }
    10% { background-color: initial; }
    20% { background-color: #7ac8e2; }
    30% { background-color: initial; }
    40% { background-color: #7ac8e2; }
    50% { background-color: initial; }
    60% { background-color: #7ac8e2; }
    100% { background-color: initial; }
}

.callout {
    padding: 0.75rem 1rem 0.75rem 1rem;
    margin-top: 1.25rem;
    margin-bottom: 1.15rem;
    border: 1px solid var(--light-border-color);
    border-left-width: .5rem;
    border-radius: .25rem;
}

.callout-primary {
    border-left-color: var(--main-color);
}

.callout-secondary {
    border-left-color: #185977;
}

.callout-success {
    border-left-color: #45c945;
}

.callout-danger {
    border-left-color: #d9534f;
}

.callout-warning {
    border-left-color: #f0ad4e;
}

.callout-info {
    border-left-color: #5bc0de;
}

.callout-light {
    border-left-color: #f2f3f5;
}

.callout-dark {
    border-left-color: #bcbebf;
}

.alert-light {
    background-color: #f4f5f7;
    border-color: #f2f3f5;
}

th {
    border-bottom: black solid 1px;
}

tr {
    border-bottom: var(--light-border-color) solid 1px;
}

td, th {
    padding-right: 1.0rem;
}

td:last-child {
    padding-right: 0;
}

table {
    margin-bottom: 0.5rem;
}

h2 code.highlighter-rouge {
    color: var(--bs-heading-color);
}

